# ds-project-template

./: README.md  cookiecutter.json  requirements.txt
hooks/: post_gen_project.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/app_fastapi/: Dockerfile
{{ cookiecutter.repo_name }}/app_streamlit/: Dockerfile  app.py  style.css  utils.py
{{ cookiecutter.repo_name }}/azureml/: Dockerfile
{{ cookiecutter.repo_name }}/notebooks/: 00-template.ipynb
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/: process_data.py  utils.py  visualise_data.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.package_name }}/utils/: util.py
{{ cookiecutter.repo_name }}/tasks/: decisions.md  lessons.md  todo.md
