[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = [
  { name = "{{ cookiecutter.author_name }}" }
]
dependencies = [
    "PyYAML",
    "python-dotenv",
    "pandas",
    "plotly"
]