[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = [{ name = "{{ cookiecutter.author_name }}" }]
requires-python = ">={{ cookiecutter.minimum_python_version }}"
dependencies = [

  # Global dependencies
  "python-dotenv",
  "PyYAML",

  # Conditional dependencies
  {% if cookiecutter.azure_ml_project|lower in ['yes', 'y'] -%}
  "azure-ai-ml",
  "azure-identity",
  {% endif -%}
  {% if cookiecutter.database_type == 'postgres' -%}
  "psycopg2-binary",
  {% elif cookiecutter.database_type == 'mysql' -%}
  "mysql-connector-python",
  {% endif -%}
]

[dependency-groups]
dev = [
  "nbstripout",
  "pre-commit",
  "pytest",
  "ruff",
]

[project.optional-dependencies]
{% if cookiecutter.include_fastapi_app|lower in ['yes', 'y'] -%}
api = [
  "fastapi",
  "uvicorn"
]
{% endif -%}
{% if cookiecutter.include_streamlit_app|lower in ['yes', 'y'] -%}
streamlit = [
  "numpy",
  "plotly",
  "streamlit",
  "streamlit-authenticator"
]
{% endif -%}

[tool.setuptools.packages.find]
where = ["src/"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"